# spark

./: 2024-12-06_01-39-04.parquet  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  read_s3.sh  requirements.txt  spark-defaults.conf
airflow/dags/: log_merge.py  log_merge_2.py
airflow/tmp/: aaa.csv
conf/: spark-defaults.conf
src/spark/: combine.py  get_log_obj.py  log_merger.py  readAll_s3.py  read_s3.py  read_s3_detail.py  read_s3_search.py
